# vectra

./: .gitignore  README.md  main.py  pyproject.toml
src/core/: query.py  sync.py
src/tui/: main.py
